feat(snapshot): Set memfile path as optional while creating snapshot
